# agentspan

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  package-lock.json  package.json
sdk/python/: AGENTS.md  CLAUDE.md  DESIGN.md  GUARDRAILS.md  GUARDRAIL_GUIDE.md  Makefile  README.md  STREAMING.md  pyproject.toml
sdk/python/docs/: agent-configuration.md  guardrails.md  sentinel-agents.md
sdk/python/examples/: 01_basic_agent.py  02_tools.py  02a_simple_tools.py  02b_multi_step_tools.py  03_structured_output.py  04_http_and_mcp_tools.py  04_mcp_weather.py  05_handoffs.py  06_sequential_pipeline.py  07_parallel_agents.py  08_router_agent.py  09_human_in_the_loop.py  09b_hitl_with_feedback.py  09c_hitl_streaming.py  09d_human_tool.py  10_guardrails.py  11_streaming.py  12_long_running.py  13_hierarchical_agents.py  14_existing_workers.py  15_agent_discussion.py  16_credentials_isolated_tool.py  16_random_strategy.py  16b_credentials_non_isolated.py  16c_credentials_cli_tools.py  16d_credentials_gh_cli.py  16e_credentials_http_tool.py  16f_credentials_mcp_tool.py  16g_credentials_framework_passthrough.py  16i_credentials_langchain.py  16j_credentials_openai_sdk.py  16k_credentials_google_adk.py  17_swarm_orchestration.py  18_manual_selection.py  19_composable_termination.py  20_constrained_transitions.py  21_regex_guardrails.py  22_llm_guardrails.py  23_token_tracking.py  24_code_execution.py  (+70 more)
sdk/python/examples/_configs/: 01_basic_agent.json  02_tools.json  03_structured_output.json  05_handoffs.json  06_sequential_pipeline.json  07_parallel_agents.json  08_router_agent.json  10_guardrails.json  (+11 more)
sdk/python/scripts/: run_examples.sh
sdk/python/tests/: __init__.py  run_compilation_comparison.sh  test_kitchen_sink.py
sdk/python/validation/: README.md  config.py  display.py  groups.py  models.py  orchestrator.py  parsing.py  runs.toml.example  toml_config.py
(+1022 files in other folders)
